# minecraft

./: .editorconfig  Better Beta - Aria.json  README.md  mise.toml  mods.jsonc  pyproject.toml  seeds.md
docs/: biomes.md  seeds.md  server.md
server/: docker-compose.yml  server.properties  whitelist.json
server/mods/.index/: balm.pw.toml  chunks-fade-in.pw.toml  lmd.pw.toml  moderner-beta.pw.toml  no-telemetry.pw.toml  reeses-sodium-options.pw.toml  yosbr.pw.toml
server/servers/nostalgia/: server.properties
server/servers/nostalgia/mods/.index/: almanac.pw.toml  lambdynamiclights.pw.toml  netherportalfix.pw.toml  no-chat-reports.pw.toml  sodium-extra.pw.toml
src/: main.py
src/deploy/: deploy.py  inventory.py
src/infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
src/lib/: mods.py  transform_mods.py
src/lib/tests/: test_transform_mods.py
